[workspace]
resolver        = "2"
members         = [ "yazi-*" ]
default-members = [ "yazi-fm", "yazi-cli" ]

[profile.dev]
debug = "line-tables-only"

[profile.release]
codegen-units = 1
lto           = true
panic         = "abort"
strip         = true

[profile.release-windows]
inherits = "release"
panic    = "unwind"

[profile.dev-opt]
inherits      = "release"
codegen-units = 256
incremental   = true
lto           = false

[profile.dev.package."*"]
debug = false

[workspace.dependencies]
ansi-to-tui         = "8.0.0"
anyhow              = "1.0.100"
base64              = "0.22.1"
bitflags            = { version = "2.10.0", features = [ "serde" ] }
clap                = { version = "4.5.54", features = [ "derive" ] }
core-foundation-sys = "0.8.7"
crossterm           = { version = "0.29.0", features = [ "event-stream" ] }
dirs                = "6.0.0"
foldhash            = "0.2.0"
futures             = "0.3.31"
globset             = "0.4.18"
hashbrown           = { version = "0.16.1", features = [ "serde" ] }
indexmap            = { version = "2.12.1", features = [ "serde" ] }
libc                = "0.2.179"
lru                 = "0.16.2"
mlua                = { version = "0.11.5", features = [ "anyhow", "async", "error-send", "lua54", "macros", "serde" ] }
objc2               = "0.6.3"
ordered-float       = { version = "5.1.0", features = [ "serde" ] }
parking_lot         = "0.12.5"
paste               = "1.0.15"
percent-encoding    = "2.3.2"
rand                = { version = "0.9.2", default-features = false, features = [ "os_rng", "small_rng", "std" ] }
ratatui             = { version = "0.30.0", features = [ "serde", "unstable-rendered-line-info", "unstable-widget-ref" ] }
regex               = "1.12.2"
russh               = { version = "0.56.0", default-features = false, features = [ "ring", "rsa" ] }
scopeguard          = "1.2.0"
serde               = { version = "1.0.228", features = [ "derive" ] }
serde_json          = "1.0.148"
syntect             = { version = "5.3.0", default-features = false, features = [ "parsing", "plist-load", "regex-onig" ] }
thiserror           = "2.0.17"
tokio               = { version = "1.49.0", features = [ "full" ] }
tokio-stream        = "0.1.17"
tokio-util          = "0.7.17"
toml                = { version = "0.9.10" }
tracing             = { version = "0.1.44", features = [ "max_level_debug", "release_max_level_debug" ] }
twox-hash           = { version = "2.1.2", default-features = false, features = [ "std", "random", "xxhash3_128" ] }
typed-path          = "0.12.0"
unicode-width       = { version = "0.2.2", default-features = false }
uzers               = "0.12.2"

[workspace.lints.clippy]
format_push_string   = "warn"
if_same_then_else    = "allow"
implicit_clone       = "warn"
len_without_is_empty = "allow"
missing_safety_doc   = "allow"
module_inception     = "allow"
option_map_unit_fn   = "allow"
unit_arg             = "allow"
use_self             = "warn"
