[workspace]
resolver        = "3"
members         = [ "yazi-*" ]
default-members = [ "yazi-fm", "yazi-cli" ]

[workspace.package]
edition      = "2024"
version      = "26.2.2"
license      = "MIT"
authors      = [ "sxyazi <sxyazi@gmail.com>" ]
homepage     = "https://yazi-rs.github.io"
repository   = "https://github.com/sxyazi/yazi"
rust-version = "1.95.0"

[profile.dev]
debug = "line-tables-only"

[profile.release]
codegen-units = 1
lto           = true
panic         = "abort"
strip         = true

[profile.release-windows]
inherits = "release"
panic    = "unwind"

[profile.dev-opt]
inherits      = "release"
codegen-units = 256
incremental   = true
lto           = false

[profile.dev.package."*"]
debug = false

[workspace.dependencies]
ansi-to-tui         = "8.0.1"
anyhow              = "1.0.102"
arc-swap            = { version = "1.9.1", features = [ "serde" ] }
base64              = "0.22.1"
bitflags            = { version = "2.11.1", features = [ "serde" ] }
chrono              = "0.4.44"
clap                = { version = "4.6.1", features = [ "derive" ] }
core-foundation-sys = "0.8.7"
crossterm           = { version = "0.29.0", features = [ "event-stream" ] }
dirs                = "6.0.0"
dyn-clone           = "1.0.20"
either              = { version = "1.15.0" }
foldhash            = "0.2.0"
futures             = "0.3.32"
globset             = "0.4.18"
hashbrown           = { version = "0.17.0", features = [ "serde" ] }
indexmap            = { version = "2.14.0", features = [ "serde" ] }
libc                = "0.2.186"
lru                 = "0.18.0"
mlua                = { version = "0.11.6", features = [ "anyhow", "async", "error-send", "lua55", "macros", "serde" ] }
objc2               = "0.6.4"
ordered-float       = { version = "5.3.0", features = [ "serde" ] }
parking_lot         = "0.12.5"
paste               = "1.0.15"
percent-encoding    = "2.3.2"
rand                = { version = "0.10.1", default-features = false, features = [ "std", "sys_rng" ] }
ratatui             = { version = "0.30.0", features = [ "serde", "unstable-rendered-line-info", "unstable-widget-ref" ] }
regex               = "1.12.3"
russh               = { version = "0.60.2", default-features = false, features = [ "ring", "rsa" ] }
scopeguard          = "1.2.0"
serde               = { version = "1.0.228", features = [ "derive" ] }
serde_json          = "1.0.149"
serde_with          = "3.18.0"
strum               = { version = "0.28.0", features = [ "derive" ] }
syntect             = { version = "5.3.0", default-features = false, features = [ "parsing", "plist-load", "regex-onig" ] }
thiserror           = "2.0.18"
tokio               = { version = "1.52.1", features = [ "full" ] }
tokio-stream        = "0.1.18"
tokio-util          = "0.7.18"
toml                = { version = "1.1.2" }
tracing             = { version = "0.1.44", features = [ "max_level_debug", "release_max_level_debug" ] }
twox-hash           = { version = "2.1.2", default-features = false, features = [ "std", "random", "xxhash3_128" ] }
typed-path          = "0.12.3"
unicode-width       = { version = "0.2.2", default-features = false }
uzers               = "0.12.2"

[workspace.lints.clippy]
format_push_string   = "warn"
if_same_then_else    = "allow"
implicit_clone       = "warn"
len_without_is_empty = "allow"
missing_safety_doc   = "allow"
module_inception     = "allow"
option_map_unit_fn   = "allow"
unit_arg             = "allow"
use_self             = "warn"
