[package]
name    = "adaptor"
version = "0.1.0"
edition = "2021"

[dependencies]
config = { path = "../config" }
shared = { path = "../shared" }

# External dependencies
anyhow      = "^1"
base64      = "^0"
color_quant = "^1"
image       = "^0"
md-5        = "^0"
once_cell   = "^1"
ratatui     = "^0"
tokio       = { version = "^1", features = ["parking_lot"] }

# Logging
tracing = "^0"
