[package]
name    = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
config = { path = "../config" }
core   = { path = "../core" }
shared = { path = "../shared" }

# External dependencies
anyhow            = "^1"
tokio             = { version = "^1", features = [ "parking_lot" ] }
crossterm         = { version = "^0", features = [ "event-stream" ] }
ratatui        		 = { version = "^0" }
ansi-to-tui       = "^3"
signal-hook-tokio = { version = "^0", features = [ "futures-v0_3" ] }
libc              = "^0"
futures           = "^0"

# Logging
tracing            = "^0"
tracing-appender   = "^0"
tracing-subscriber = "^0"
