[package]
name    = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
adaptor = { path = "../adaptor" }
config  = { path = "../config" }
core    = { path = "../core" }
plugin  = { path = "../plugin" }
shared  = { path = "../shared" }

# External dependencies
ansi-to-tui   = "^3"
anyhow        = "^1"
crossterm     = { version = "^0", features = [ "event-stream" ] }
futures       = "^0"
ratatui    		 = "^0"
tokio         = { version = "^1", features = [ "parking_lot" ] }
unicode-width = "^0"

# Logging
tracing            = "^0"
tracing-appender   = "^0"
tracing-subscriber = "^0"

[target.'cfg(not(target_os = "windows"))'.dependencies]
libc              = "^0"
signal-hook-tokio = { version = "^0", features = [ "futures-v0_3" ] }

[[bin]]
name = "yazi"
path = "src/main.rs"
