[package]
name    = "config"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }

# External dependencies
anyhow    = "^1"
crossterm = "^0"
futures   = "^0"
glob      = "^0"
once_cell = "^1"
ratatui   = "^0"
serde     = { version = "^1", features = [ "derive" ] }
toml      = { version = "^0", features = [ "preserve_order" ] }
xdg       = "^2"
