[package]
name    = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
adaptor = { path = "../adaptor" }
config  = { path = "../config" }
shared  = { path = "../shared" }

# External dependencies
anyhow        = "^1"
async-channel = "^1"
crossterm     = "^0"
futures       = "^0"
indexmap      = "^2"
libc          = "^0"
notify        = { version = "^6", default-features = false, features = [ "macos_fsevent" ] }
parking_lot   = "^0"
ratatui       = "^0"
regex         = "^1"
serde         = "^1"
serde_json    = "^1"
syntect       = "^5"
tokio         = { version = "^1", features = [ "parking_lot", "macros", "rt-multi-thread", "sync", "time", "fs", "process", "io-std", "io-util" ] }
tokio-stream  = "^0"
tracing       = "^0"
unicode-width = "^0"
yazi-prebuild = "^0"

[target.'cfg(target_os = "windows")'.dependencies]
clipboard-win = "^4"

[target.'cfg(not(target_os = "netbsd"))'.dependencies]
trash = "^3"
