[package]
name    = "shared"
version = "0.1.5"
edition = "2021"

[dependencies]
anyhow      = "^1"
crossterm   = "^0"
futures     = "^0"
libc        = "^0"
parking_lot = "^0"
ratatui    	= "^0"
regex       = "^1"
tokio       = { version = "^1", features = [ "parking_lot", "macros", "rt-multi-thread", "sync", "time", "fs" ] }
