[package]
name                   = "yazi-actor"
description            = "Yazi actor model"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
homepage.workspace     = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default      = [ "vendored-lua" ]
vendored-lua = [ "mlua/vendored" ]

[dependencies]
yazi-binding   = { path = "../yazi-binding", version = "26.5.6" }
yazi-boot      = { path = "../yazi-boot", version = "26.5.6" }
yazi-config    = { path = "../yazi-config", version = "26.5.6" }
yazi-core      = { path = "../yazi-core", version = "26.5.6" }
yazi-dds       = { path = "../yazi-dds", version = "26.5.6" }
yazi-emulator  = { path = "../yazi-emulator", version = "26.5.6" }
yazi-fs        = { path = "../yazi-fs", version = "26.5.6" }
yazi-macro     = { path = "../yazi-macro", version = "26.5.6" }
yazi-parser    = { path = "../yazi-parser", version = "26.5.6" }
yazi-plugin    = { path = "../yazi-plugin", version = "26.5.6" }
yazi-proxy     = { path = "../yazi-proxy", version = "26.5.6" }
yazi-runner    = { path = "../yazi-runner", version = "26.5.6" }
yazi-scheduler = { path = "../yazi-scheduler", version = "26.5.6" }
yazi-shared    = { path = "../yazi-shared", version = "26.5.6" }
yazi-shim      = { path = "../yazi-shim", version = "26.5.6" }
yazi-term      = { path = "../yazi-term", version = "26.5.6" }
yazi-tty       = { path = "../yazi-tty", version = "26.5.9" }
yazi-vfs       = { path = "../yazi-vfs", version = "26.5.6" }
yazi-watcher   = { path = "../yazi-watcher", version = "26.5.6" }
yazi-widgets   = { path = "../yazi-widgets", version = "26.5.6" }

# External dependencies
anyhow       = { workspace = true }
crossterm    = { workspace = true }
either       = { workspace = true }
futures      = { workspace = true }
hashbrown    = { workspace = true }
indexmap     = { workspace = true }
mlua         = { workspace = true }
paste        = { workspace = true }
ratatui      = { workspace = true }
scopeguard   = { workspace = true }
tokio        = { workspace = true }
tokio-stream = { workspace = true }
tracing      = { workspace = true }

[target."cfg(unix)".dependencies]
libc = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
crossterm = { workspace = true, features = [ "use-dev-tty", "libc" ] }
