[package]
name        = "yazi-adapter"
version     = "26.1.4"
edition     = "2024"
license     = "MIT"
authors     = [ "sxyazi <sxyazi@gmail.com>" ]
description = "Yazi image adapter"
homepage    = "https://yazi-rs.github.io"
repository  = "https://github.com/sxyazi/yazi"

[lints]
workspace = true

[dependencies]
yazi-config = { path = "../yazi-config", version = "26.1.4" }
yazi-fs     = { path = "../yazi-fs", version = "26.1.4" }
yazi-macro  = { path = "../yazi-macro", version = "26.1.4" }
yazi-shared = { path = "../yazi-shared", version = "26.1.4" }
yazi-term   = { path = "../yazi-term", version = "26.1.4" }

# External dependencies
ansi-to-tui = { workspace = true }
anyhow      = { workspace = true }
base64      = { workspace = true }
crossterm   = { workspace = true }
image       = { version = "0.25.9", default-features = false, features = [ "avif", "bmp", "dds", "exr", "ff", "gif", "hdr", "ico", "jpeg", "png", "pnm", "qoi", "tga", "webp" ] }
moxcms      = "0.7.11"
palette     = { version = "0.7.6", default-features = false }
quantette   = { version = "0.5.1", default-features = false }
ratatui     = { workspace = true }
scopeguard  = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
crossterm = { workspace = true, features = [ "use-dev-tty", "libc" ] }
