[package]
name                   = "yazi-adapter"
description            = "Yazi image adapter"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
homepage.workspace     = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
yazi-config   = { path = "../yazi-config", version = "26.5.6" }
yazi-emulator = { path = "../yazi-emulator", version = "26.5.6" }
yazi-fs       = { path = "../yazi-fs", version = "26.5.6" }
yazi-macro    = { path = "../yazi-macro", version = "26.5.6" }
yazi-shared   = { path = "../yazi-shared", version = "26.5.6" }
yazi-shim     = { path = "../yazi-shim", version = "26.5.6" }
yazi-tty      = { path = "../yazi-tty", version = "26.5.9" }
yazi-widgets  = { path = "../yazi-widgets", version = "26.5.6" }

# External dependencies
ansi-to-tui  = { workspace = true }
anyhow       = { workspace = true }
base64       = { workspace = true }
image        = { workspace = true }
inventory    = { workspace = true }
moxcms       = "0.8.1"
palette      = { version = "0.7.6", default-features = false }
quantette    = { version = "0.6.0", default-features = false }
ratatui-core = { workspace = true }
strum        = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }
