[package]
name        = "yazi-adaptor"
version     = "0.1.5"
edition     = "2021"
license     = "MIT"
authors     = [ "sxyazi <sxyazi@gmail.com>" ]
description = "Yazi image adaptor"
homepage    = "https://yazi-rs.github.io"
repository  = "https://github.com/sxyazi/yazi"

[dependencies]
yazi-config = { path = "../yazi-config", version = "0.1.5" }
yazi-shared = { path = "../yazi-shared", version = "0.1.5" }

# External dependencies
anyhow      = "^1"
base64      = "^0"
color_quant = "^1"
image       = "^0"
ratatui     = "^0"
tokio       = { version = "^1", features = [ "parking_lot" ] }

# Logging
tracing = "^0"
