[package]
name        = "yazi-adaptor"
version     = "0.2.0"
edition     = "2021"
license     = "MIT"
authors     = [ "sxyazi <sxyazi@gmail.com>" ]
description = "Yazi image adaptor"
homepage    = "https://yazi-rs.github.io"
repository  = "https://github.com/sxyazi/yazi"

[dependencies]
yazi-config = { path = "../yazi-config", version = "0.2.0" }
yazi-shared = { path = "../yazi-shared", version = "0.2.0" }

# External dependencies
anyhow       = "^1"
arc-swap     = "^1"
base64       = "^0"
color_quant  = "^1"
image        = "^0"
imagesize    = "^0"
kamadak-exif = "0"
ratatui      = "^0"
tokio        = { version = "^1", features = [ "parking_lot", "io-util", "process" ] }

# Logging
tracing = { version = "^0", features = [ "max_level_debug", "release_max_level_warn" ] }
