[package]
name                   = "yazi-binding"
description            = "Yazi Lua bindings"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
homepage.workspace     = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default      = [ "vendored-lua" ]
vendored-lua = [ "mlua/vendored" ]

[dependencies]
yazi-adapter = { path = "../yazi-adapter", version = "26.2.2" }
yazi-codegen = { path = "../yazi-codegen", version = "26.2.2" }
yazi-config  = { path = "../yazi-config", version = "26.2.2" }
yazi-fs      = { path = "../yazi-fs", version = "26.2.2" }
yazi-macro   = { path = "../yazi-macro", version = "26.2.2" }
yazi-shared  = { path = "../yazi-shared", version = "26.2.2" }
yazi-vfs     = { path = "../yazi-vfs", version = "26.2.2" }
yazi-widgets = { path = "../yazi-widgets", version = "26.2.2" }

# External dependencies
ansi-to-tui   = { workspace = true }
anyhow        = { workspace = true }
crossterm     = { workspace = true }
futures       = { workspace = true }
hashbrown     = { workspace = true }
mlua          = { workspace = true }
paste         = { workspace = true }
ratatui       = { workspace = true }
serde_json    = { workspace = true }
tokio  	      = { workspace = true }
tokio-stream  = { workspace = true }
tracing       = { workspace = true }
unicode-width = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
crossterm = { workspace = true, features = [ "use-dev-tty", "libc" ] }
