[package]
name                   = "yazi-binding"
description            = "Yazi Lua bindings"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
homepage.workspace     = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default      = [ "vendored-lua" ]
vendored-lua = [ "mlua/vendored" ]

[dependencies]
yazi-codegen = { path = "../yazi-codegen", version = "26.5.6" }
yazi-macro   = { path = "../yazi-macro", version = "26.5.6" }
yazi-shim    = { path = "../yazi-shim", version = "26.5.6" }

# External dependencies
ansi-to-tui   = { workspace = true }
anyhow        = { workspace = true }
futures       = { workspace = true }
hashbrown     = { workspace = true }
image         = { workspace = true }
inventory     = { workspace = true }
mlua          = { workspace = true }
ordered-float = { workspace = true }
ratatui       = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
strum         = { workspace = true }
tokio  	      = { workspace = true }
tracing       = { workspace = true }
unicode-width = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target."cfg(windows)".dependencies]
windows-sys = { version = "0.61.2", features = [ "Win32_Foundation", "Win32_System_JobObjects" ] }
