[package]
name                   = "yazi-boot"
description            = "Yazi bootstrapper"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
homepage.workspace     = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
yazi-adapter  = { path = "../yazi-adapter", version = "26.2.2" }
yazi-config   = { path = "../yazi-config", version = "26.2.2" }
yazi-emulator = { path = "../yazi-emulator", version = "26.2.2" }
yazi-fs       = { path = "../yazi-fs", version = "26.2.2" }
yazi-macro    = { path = "../yazi-macro", version = "26.2.2" }
yazi-shared   = { path = "../yazi-shared", version = "26.2.2" }
yazi-vfs      = { path = "../yazi-vfs", version = "26.2.2" }

# External dependencies
clap      = { workspace = true }
futures   = { workspace = true }
hashbrown = { workspace = true }
regex     = { workspace = true }

[build-dependencies]
yazi-shared = { path = "../yazi-shared", version = "26.2.2" }

# External dependencies
clap                  = { workspace = true }
clap_complete         = "4.6.1"
clap_complete_fig     = "4.5.2"
clap_complete_nushell = "4.6.0"
vergen-gitcl          = { version = "9.1.0", features = [ "build", "rustc" ] }
