[package]
name        = "yazi-build"
version     = "26.2.2"
edition     = "2024"
license     = "MIT"
authors     = [ "sxyazi <sxyazi@gmail.com>" ]
description = "Yazi build system"
homepage    = "https://yazi-rs.github.io"
repository  = "https://github.com/sxyazi/yazi"

[lints]
workspace = true

[profile.release]
codegen-units = 1
lto           = true
panic         = "abort"
strip         = true

[build-dependencies]
yazi-tty = { path = "../yazi-tty", version = "26.2.2" }

[[bin]]
name = "yazi-build"
path = "src/main.rs"
