[package]
name                   = "yazi-build"
description            = "Yazi build system"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
homepage.workspace     = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[profile.release]
codegen-units = 1
lto           = true
panic         = "abort"
strip         = true

[build-dependencies]
yazi-tty = { path = "../yazi-tty", version = "26.5.6" }

[[bin]]
name = "yazi-build"
path = "src/main.rs"
