[package]
name                   = "yazi-build"
description            = "Yazi build system"
version                = "26.5.9"
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
homepage.workspace     = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[build-dependencies]
anyhow   = { workspace = true }
yazi-tty = { path = "../yazi-tty", version = "26.5.9" }

[[bin]]
name = "yazi-build"
path = "src/main.rs"
